# cockroach

./: DEPS.bzl  Gopkg.toml  Makefile  admission_control.md  go.mod  merge_logs.go
docs/RFCS/: 20181227_follower_reads_implementation.md  20191009_gc_protected_timestamps.md  20191022_zone_config_caching.md
pkg/admission/: admission.go  controller.go  controller_test.go  priority.go  priority_test.go  queue.go
pkg/base/: config.go
pkg/ccl/backupccl/: backup_planning.go  backup_test.go  restore_job.go  restore_planning.go  targets.go
pkg/ccl/changefeedccl/: bench_helpers_test.go  bench_test.go  changefeed.go  changefeed_processors.go  changefeed_test.go  encoder.go  poller.go
pkg/ccl/followerreadsccl/: followerreads.go
pkg/ccl/importccl/: import_stmt.go  load.go
pkg/ccl/partitionccl/: partition_test.go
pkg/cli/: debug.go
pkg/clusterversion/: cockroach_versions.go  versionkey_string.go
pkg/cmd/proxy/: proxy.go
pkg/cmd/roachprod/: README.md  main.go
pkg/cmd/roachprod-stress/: main.go
pkg/cmd/roachtest/: cdc.go  overload_tpcc_olap.go  tpcc.go
pkg/connect/: connect.go  doc.go  wait_group.go
pkg/jobs/: adopt.go  registry.go
pkg/jobs/jobspb/: BUILD.bazel  jobs.pb.go  jobs.proto  wrap.go
pkg/keys/: constants.go
pkg/kv/: dist_sender.go  leaseholder_policy.go  transport.go
pkg/kv/kvserver/: client_rangefeed_test.go  gc_queue_test.go  gossip_test.go  replica_send.go  store.go
pkg/migration/: BUILD.bazel  migration.go  registry.go
pkg/migration/migrationcluster/: BUILD.bazel  cluster.go  helper_test.go
pkg/migration/migrationjob/: migration_job.go
pkg/migration/migrationmanager/: BUILD.bazel  manager.go  manager_external_test.go
pkg/protectedts/: protectedts.go
pkg/protectedts/provider/: list.go  main_test.go  protect.go  provider.go  provider_test.go  release.go
pkg/protectedts/schema/: schema.go
pkg/proxy/cli/: cli.go
pkg/proxy/server/: server.go
pkg/qos/: level.go  level_test.go
pkg/qos/admission/: controller.go  controller_test.go  metrics.go
pkg/qos/controller/: controller.go  controller_test.go  metrics.go
pkg/ratekeeper/: ratekeeper2.go
pkg/roachpb/: api.go  api.pb.go  api.proto  batch_generated.go  data.pb.go  data.proto  errors.go  errors.pb.go  errors.proto
pkg/rpc/: context.go  context_test.go  metrics.go  qos.go  qos_test.go  stats_handler.go
pkg/rpc/nodedialer/: nodedialer.go
pkg/server/: BUILD.bazel  server.go  server_sql.go  server_test.go  status.go
pkg/server/settingswatcher/: settings_watcher.go
pkg/server/status/: recorder.go
pkg/settings/: setting.go
pkg/sql/: BUILD.bazel  alter_table.go  backfill.go  conn_executor.go  conn_executor_exec.go  crdb_internal.go  crdb_internal_test.go  create_table.go  create_test.go  create_type.go  database.go  distsql_physical_planner.go  distsql_running.go  drop_database.go  drop_table.go  drop_test.go  exec_util.go  executor_statement_metrics.go  explain_ddl.go  index_backfiller.go  information_schema.go  internal.go  lease.go  opt_catalog.go  pg_catalog.go  planhook.go  planner.go  resolver.go  schema_changer.go  schema_changer_state.go  schema_changer_test.go  set_zone_config.go  testutils.go  truncate.go  virtual_schema.go  walk.go  zone_config.go  zone_config_test.go
pkg/sql/catalog/: catalog.go  descriptor_id_set.go
pkg/sql/distsqlplan/: span_resolver.go  span_resolver_test.go
pkg/sql/distsqlrun/: flow.go  flow_registry.go  flow_scheduler.go  outbox.go  processors.go  server.go  tablereader.go
pkg/sql/execinfrapb/: processors_bulk_io.pb.go
pkg/sql/logictest/: logic.go
pkg/sql/parser/: lexer_test.go  sql.y
pkg/sql/schemachanger/scop/: BUILD.bazel  mutation.go  ops.go
pkg/sql/sqlbase/: database_desc.go  descriptor.go  metadata.go  schema_desc.go  structured.go  structured.pb.go  structured.proto  system.go  system_test.go  table_desc.go  type_desc.go
pkg/sql/stats/: stats_cache.go
pkg/sql/tests/: system_table_test.go
pkg/sqlmigrations/: migrations.go  migrations_test.go
pkg/storage/: client_merge_test.go  client_protectedts_test.go  client_raft_test.go  client_split_test.go  client_test.go  entry_application_state_buf.go  entry_application_state_buf_test.go  gc_queue.go  helpers_test.go  merge_queue.go  metrics.go  mvcc.go  queue.go  raft.pb.go  raft_snapshot_queue.go  read_quota.go  replica.go  replica_application.go  replica_application_result.go  replica_application_state_machine.go  replica_command.go  replica_destroy.go  replica_gc_queue.go  replica_gc_queue_test.go  replica_init.go  replica_learner_test.go  replica_proposal.go  replica_proposal_quota.go  replica_protected_timestamp.go  replica_raft.go  replica_raftstorage.go  replica_rangefeed.go  replica_read.go  replica_sideload.go  replica_sideload_test.go  replica_test.go  store.go  store_snapshot.go  store_test.go
pkg/storage/lease/: lease.go
pkg/storage/proposalquota/: proposalquota.go
pkg/storage/protectedts/: protectedts.go  storage_with_database.go
pkg/storage/quota/: quota.go  quota_test.go
pkg/storage/raftentry/: cache.go  cache_test.go
pkg/storage/readcontrol/: readcontrol.go
pkg/storage/readquota/: metrics.go  readquota.go
pkg/storage/replication/: README.md  config.go  doc.go  message.go  orchestrator.go  peer.go  peer_storage.go  quota_pool.go  raft.go  replication.go  (+7 more)
pkg/testutils/: soon.go
pkg/ts/: server.go
(+117 files in other folders)
