load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "migrationcluster",
    srcs = [
        "cluster.go",
        "migrationcluster.go",
        "nodes.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/migration/migrationcluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver/liveness/livenesspb",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/server/serverpb",
        "//pkg/util/ctxgroup",
        "//pkg/util/log",
        "//pkg/util/quotapool",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/cockroachdb/redact",
        "//vendor/github.com/pkg/errors",
        "//vendor/google.golang.org/grpc",
    ],
)

go_test(
    name = "migrationcluster_test",
    srcs = [
        "client_test.go",
        "helper_test.go",
        "main_test.go",
        "nodes_test.go",
    ],
    embed = [":migrationcluster"],
    deps = [
        "//pkg/kv/kvserver",
        "//pkg/migration/nodelivenesstest",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/server/serverpb",
        "//pkg/sql/tests",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/leaktest",
        "//pkg/util/syncutil",
        "//vendor/google.golang.org/grpc",
    ],
)
