load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "migrationmanager",
    srcs = ["manager.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/migration/migrationmanager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clusterversion",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/kv",
        "//pkg/migration",
        "//pkg/security",
        "//pkg/server/serverpb",
        "//pkg/sql/protoreflect",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlutil",
        "//pkg/util/log",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/cockroachdb/logtags",
    ],
)

go_test(
    name = "migrationmanager_test",
    srcs = [
        "main_test.go",
        "manager_external_test.go",
    ],
    deps = [
        "//pkg/base",
        "//pkg/clusterversion",
        "//pkg/jobs",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/batcheval",
        "//pkg/migration",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql/sqlutil",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/ctxgroup",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/tracing",
        "//vendor/github.com/pkg/errors",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
